# EyeSpy

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  Pipfile  README.md  alembic.ini  api_schema.md  discord.db  eyespy_client.py  main.py  pyproject.toml  requirements.txt
alembic/versions/: ca2d69bafecd_create_spy_table.py
api/: api.py
clients/: __init__.py  eyespy_gateway_client.py  rest_client.py
dal/: __init__.py  dal.py
dal/decorators/: __init__.py  dal_execute.py  dal_execute_param.py  dal_retrieve.py
discordbot/: eyespy_client.py
eyespy/: __init__.py  main.py
eyespy/api/: api.py
eyespy/api/models/: audit_search_repository.py  audit_search_request.py
eyespy/api/routers/: audit.py  user.py  users.py
eyespy/clients/: __init__.py  eyespy_gateway_client.py
eyespy/dal/: __init__.py  audit_dal.py  dal.py  mongo_connection.py
eyespy/dal/decorators/: __init__.py
eyespy/enumerations/: audit_type.py
eyespy/managers/: __init__.py  eyespy_audit_manager.py  eyespy_manager.py
eyespy/models/: __init__.py  notify_spy_request.py  spy_request.py  voice_audit.py
managers/: __init__.py  eyespy_manager.py  music_manager.py
models/: __init__.py  spy_request.py
