[tool.poetry]
name = "eyespy"
version = "0.1.0"
description = ""
authors = ["Will Dietrich"]
readme = "README.md"
packages = [{include = "eyespy"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
alembic = "^1.10.2"
fastapi = "^0.95.0"
hikari = "^2.0.0.dev118"
hikari-lightbulb = "^2.3.2"
python-dotenv = "^1.0.0"
SQLAlchemy = "^2.0.7"
uvicorn = "^0.21.1"
pymongo = {extras = ["srv"], version = "^4.6.1"}
[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
